<resources>
    <string name="app_name">HikingApp</string>
    <string name="hiking_tracker">Hiking Tracker</string>
    <string name="track_your_adventures">Track your adventures</string>
    <string name="button">Add Hike</string>
    <string name="add_hike">Add Hike</string>
    <string name="add_observations">Add Observations</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="edit_hike">Edit Hike</string>
    <string name="filters">Filters</string>
    <string name="quick_search_by_name">Quick search by name…</string>
    <string name="hike_name_information">e.g., Snowdon Summit Trail</string>
    <string name="hike_location_information">e.g., Snowdon Summit Trail</string>
    <string name="hike_date_information">Pick a date</string>
    <string name="hike_length_information">0</string>
    <string name="hike_level_information">Select difficulty</string>
    <string name="hike_available_information">Parking Available</string>
    <string name="hike_description_information">Additional notes about the hike…</string>
    <string name="no_hikes_found">No hikes found</string>
    <string name="textview">Create New Hike</string>
    <string name="difficulty_level">Difficulty Level *</string>
    <string name="create_hike">Create Hike</string>
    <string name="hike_name">Name</string>
    <string name="observations">Observations</string>
    <string name="hike_location">Location</string>
    <string name="hike_date">Date</string>
    <string name="hike_length">Length</string>
    <string name="km">km</string>
    <string name="hike_available">Parking</string>
    <string name="hike_description">Description</string>
    <string name="hike_level">Level</string>
    <string name="view_details">View Details</string>
    <string name="hike_name_title">Hike Name *</string>
    <string name="hike_location_title">Location *</string>
    <string name="hike_date_title">Pick a date *</string>
    <string name="hike_length_title">Hike Length (km) *</string>
    <string name="hike_level_title">Difficult Level *</string>
    <string name="hike_description_title">Description</string>
    <string name="arrange">Arrange</string>
    <string name="reset_database">Reset Database?</string>
    <string name="warning">This will permanently delete all hikes and observations. This action cannot be undone.</string>
    <string name="delete">Reset All Data</string>
    <string name="cancel">Cancel</string>
    <string name="no_hikes">No Hikes Found</string>
    <string name="no_observation">No observations yet</string>
    <string name="try_adjusting_your_search_filters">Try adjusting your search filters</string>
    <string name="add_your_observation">Add your first observation to track what you see on this hike</string>
    <string name="sort">Sort by number</string>
    <string name="update_hike">Update Hike</string>
    <string name="update_title">Update Hike Now</string>
    <string name="time_observation">Time</string>
    <string name="comment">Comment</string>
    <string name="filters_text_view">Filters</string>
    <string name="hike_name_filters">Hike name</string>
    <string name="location_filters">Location</string>
    <string name="difficulty_filters">Difficulty</string>
    <string name="min_length_filters">Min length</string>
    <string name="max_length_filters">Max length</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="observation_input">Observation</string>
    <string name="optional_notes">Optional notes...</string>
    <string name="add_observation">Add Observation</string>
</resources>
